# ptx-and-ct-classification

./: .gitignore  README.md  pyproject.toml
scripts_r/: plot_venn_diagram.R  plot_venn_diagram_chestxray14.R  plot_venn_diagramm_ptx_cohorts.R
src/ptx_classification/: calibration.py  calibration_test.py  class_weights.py  class_weights_test.py  loss.py  loss_test.py  models.py  models_test.py  transforms.py  transforms_test.py  utils.py  utils_test.py
src/ptx_classification/chest_tube_classification/: testing.py  train_ct_candid.py
src/ptx_classification/data/: bbox.py  chest_tube_data_frame.py  datamodules.py  datasets.py  explore_data.py
src/ptx_classification/data/candid_ptx/: candid_ptx.py  candid_ptx_test.py
src/ptx_classification/data/chestxray14/: chestxray14.py  chestxray14_test.py
src/ptx_classification/data/chexpert/: chexpert.py  chexpert_test.py
src/ptx_classification/data/padchest/: padchest.py  padchest_test.py
src/ptx_classification/data/ptx_cohorts/: ptx_cohorts.py  ptx_cohorts_test.py
src/ptx_classification/evaluation/: evaluate.py  evaluate_models.py  evaluate_test.py  evaluation_on_ptx_cohorts.py  evaluation_on_ptx_cohorts_test.py  grad_cam.py  grad_cam_test.py
src/ptx_classification/explore_chexpert/: eval_on_sample.py  read_in_chexpert.py
src/ptx_classification/ptx/: train_chestxray14.py  train_chestxray14_chexpert.py  train_chexpert.py  train_ptx_candid.py
src/scripts/: explore_datasets.py  grad_cam_evaluation.py  grad_cam_exploration.py  load_and_predict.py  ptx_cohorts_evaluation.py
